--- a/com.tutorial/src/main/resources/application.properties
+++ b/com.tutorial/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+# Configuration for MySQL Database
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url = jdbc:mysql://localhost:3306/user
+spring.datasource.username=root
+spring.datasource.password=Welcome@imr14
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql:true
