--- a/Core-Java/bin/.gitignore
+++ b/Core-Java/bin/.gitignore
@@ -1,1 +1,19 @@
+/Access_Modifiers
+/CollectioLinkedList
+/CollectionListInterface
+/Collections
+/Constructors
+/Exception-in-java.png
+/FibonacciSeries.class
+/HashSet
+/Interview_Questions
+/Java_Operators
+/Map
+/OOPs_Concept
+/StringBuffer
+/String_Builder
+/String_Notes
+/Synchronization
 /com/
+/istatic/
+/practiceoverriding/
